--- a/client/src/components/Introduction/Navbar.module.css
+++ b/client/src/components/Introduction/Navbar.module.css
@@ -65,6 +65,14 @@
   display: none;
   cursor: pointer;
 }
+.image{
+  width: 3rem;
+  height: 3rem;
+  object-fit: fill;
+  border-radius: 50%;
+  margin-right: 1rem;
+  cursor: pointer;
+}
 @media (max-width: 1200px) {
   .button{
     font-size: 1rem;
