--- a/client/src/components/Meals/Meal.module.css
+++ b/client/src/components/Meals/Meal.module.css
@@ -92,4 +92,7 @@
     .number {
         font-size: 1.2rem;
     }
+    .price{
+        margin-top: 1.3rem;
+    }                                                                               
 }
